1. Added Bottom Navigation bar using GNav Package 2. Added /pages/ for each dashboardOption

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  animations: ^2.0.10
+  google_nav_bar: ^5.0.6
+  
 
 dev_dependencies:
   flutter_test:
