--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   shared_preferences: ^2.2.2
   page_transition: "^2.1.0"
+  google_fonts: 
 
 dev_dependencies:
   flutter_test:
@@ -23,9 +24,10 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   fonts:
-    - family: JosefinSans
+    - family: Raleway
       fonts:
-        - asset: ./assets/fonts/JosefinSans-Regular.ttf
+        - asset: ./assets/fonts/Raleway/Raleway-Medium.ttf
     - family: Sacramento
       fonts:
         - asset: ./assets/fonts/Sacramento-Regular.ttf
+    
