--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   shared_preferences: ^2.2.2
   page_transition: "^2.1.0"
+  fl_chart: ^0.65.0
 
 dev_dependencies:
   flutter_test:
