added launcher icons

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,17 @@ dependencies:
   shared_preferences: ^2.2.2
   page_transition: "^2.1.0"
   fl_chart: ^0.65.0
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/img/logo.png"
 
 flutter:
   uses-material-design: true
