made adaptive icon (needs still some padding)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/img/logo.png"
+  image_path: "assets/img/logo.jpg"
+  adaptive_icon_background: "assets/icon/icon-background.png"
+  adaptive_icon_foreground: "assets/icon/icon.png"
 
 flutter:
   uses-material-design: true
