--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   sqflite: ^2.3.0
   path_provider: ^2.1.1
   path: ^1.8.3
+  collection: ^1.18.0
+  flutter_svg: ^2.0.4
   
 
 dev_dependencies:
@@ -42,4 +44,5 @@ flutter:
       fonts:
         - asset: ./assets/fonts/Sacramento-Regular.ttf
   assets:
-    - assets/img/
+    - assets/
+    - assets/Squiggly Arrow.svg
