--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,6 @@ dependencies:
   path: ^1.8.3
   collection: ^1.18.0
   flutter_svg: ^2.0.4
-  
 
 dev_dependencies:
   flutter_test:
@@ -45,4 +44,5 @@ flutter:
         - asset: ./assets/fonts/Sacramento-Regular.ttf
   assets:
     - assets/
+    - assets/img/
     - assets/Squiggly Arrow.svg
