--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   path: ^1.8.3
   collection: ^1.18.0
   flutter_svg: ^2.0.4
+  connectivity_plus: ^5.0.2
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
