--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_svg: ^2.0.4
   connectivity_plus: ^5.0.2
   http: ^1.1.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
