--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   connectivity_plus: ^5.0.2
   http: ^1.1.2
   shared_preferences: ^2.2.2
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
