--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,3 +54,19 @@ flutter:
     - assets/logo/Dark Logo.svg
     - assets/logo/Light Logo.svg
     - assets/icon/google.png
+
+    - assets/bodyFatPercentage/male/4-6%.svg
+    - assets/bodyFatPercentage/male/7-10%.svg
+    - assets/bodyFatPercentage/male/11-15%.svg
+    - assets/bodyFatPercentage/male/16-23%.svg
+    - assets/bodyFatPercentage/male/23-30%.svg
+    - assets/bodyFatPercentage/male/31-40%.svg
+    - assets/bodyFatPercentage/male/>40%.svg
+
+    - assets/bodyFatPercentage/female/10-15%.svg
+    - assets/bodyFatPercentage/female/16-20%.svg
+    - assets/bodyFatPercentage/female/21-25%.svg
+    - assets/bodyFatPercentage/female/26-30%.svg
+    - assets/bodyFatPercentage/female/31-35%.svg
+    - assets/bodyFatPercentage/female/36-45%.svg
+    - assets/bodyFatPercentage/female/>45%.svg
