--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   percent_indicator: ^4.2.3
   flutter_animate: ^4.5.0
   intl: ^0.19.0
+  dio: ^5.4.2
+  image_picker: ^1.0.7
+  image: ^4.1.7
+  multipart_request_null_safety: ^0.3.4
 
 dev_dependencies:
   flutter_test:
