--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   image_picker: ^1.0.7
   image: ^4.1.7
   multipart_request_null_safety: ^0.3.4
+  smooth_page_indicator: ^1.1.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -39,7 +41,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/logo/darklogo.png"
+  image_path: "assets/logo/appicon.png"
 
 flutter:
   uses-material-design: true
