--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
   soundpool: ^2.4.1
+  keep_screen_on: ^3.0.0
 
 dev_dependencies:
   flutter_test:
