--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+	<string>http</string>
+	<string>https</string>
+	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Flexify is requesting access to the Photo Library</string>
 	<key>NSCameraUsageDescription</key>
