--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,11 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   carousel_slider: ^4.2.1
   provider: ^6.1.2
-  qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
   soundpool: ^2.4.1
   keep_screen_on: ^3.0.0
   url_launcher: ^6.3.0
+  pretty_qr_code: ^3.3.0
 
 dev_dependencies:
   flutter_test:
