--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,12 @@ dev_dependencies:
   flutter_lints: ^4.0.0
 
 flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/logo/appicon.png"
+  image_path: "assets/logo/appicon.png" # Path to your new icon image
+  android: true # Enables Android icon generation
+  ios: true # Enables iOS icon generation
+  background_color_ios: "#000000" # Sets the background color to black for iOS
+  remove_alpha_channel_ios: true # Removes any transparency in the iOS icon
+  image_path_ios: "assets/logo/darklogoBG.png"
 
 flutter:
   uses-material-design: true
