--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   keep_screen_on: ^3.0.0
   url_launcher: ^6.3.0
   pretty_qr_code: ^3.3.0
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -97,3 +98,5 @@ flutter:
 
     - assets/sounds/beep.mp3
     - assets/sounds/boxing-bell.mp3
+
+    - assets/animations/flexify_easteregg.json
